fixed the bottom scrollbar

--- a/drsin/templates/css/main.css
+++ b/drsin/templates/css/main.css
@@ -23,14 +23,22 @@ a{
 	background:${config['pallett.five']};
 	padding:0;
 	margin:0;
-	padding-left:10px;
+/*	padding-left:10px;*/
 	clear:both;
 	text-align: left; /* for IE */
 	color:${config['pallett.four']};
+	position:relative;
+	
+}
+#topbar{
+	top:0;
+}
+#bottombar{
+	bottom:0;
 }
 #topbar>p,#bottombar>p{
 	margin:auto;
-	padding-left:6em;
+	padding-left:1em;
 	padding-top:0.5em;
 	padding-bottom:0.5em;
 	font-size:10pt;
